CRA privacy terms